fix: big gap above science

--- a/source/assets/styles/main.scss
+++ b/source/assets/styles/main.scss
@@ -817,7 +817,7 @@ tbody{
 // }
 
 #science {
-    margin-top: 20vh;
+    margin-top: 10vh;
 }
 
 //     article::before {
